# switch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
docs/: MCP_CONTRACT.md  PERF.md  SCHEMA.md  SPEC.md
migrations/: 0001_init.sql
rules/: AGENTS.md  CLAUDE.md
src/: checkpoint.rs  db.rs  git.rs  main.rs  mcp.rs
tests/: cli_smoke.rs
webapp/: index.html  styles.css
