[package]
name = "switch"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Local-first context handoff for AI coding agents"
license = "MIT"
readme = "README.md"
keywords = ["cli", "context", "mcp", "ai", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
