[package]
name = "context0"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
description = "git-scoped session state for AI coding agents"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SyedSibtainRazvi/context0"
homepage = "https://github.com/SyedSibtainRazvi/context0"
keywords = ["cli", "context", "mcp", "ai", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
